# amazon-freertos-proj

./: .gitignore  CMakeLists.txt
freertos-configs/: aws_clientcredential.h  aws_demo_config.h  dht11.h
src/: dht11.c  main.c
